--- a/frontend/src/app/componentes/veiculos/veiculos-create/veiculos-create.component.html
+++ b/frontend/src/app/componentes/veiculos/veiculos-create/veiculos-create.component.html
@@ -1,1 +1,17 @@
-<p>veiculos-create works!</p>
+<mat-card>
+    <mat-card-title>Novo Veiculo</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input matInput placeholder="placa" [(ngModel)]="veiculo.placa" name="placa">
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="cor" [(ngModel)]="veiculo.cor" name="cor">
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="criarVeiculo()" color="primary">
+        Salvar
+    </button>
+    <button mat-raised-button (click)="cancelar()">
+        Cancelar
+    </button>
+</mat-card>
