--- a/frontend/src/app/componentes/usuarios/usuarios-create/usuarios-create.component.html
+++ b/frontend/src/app/componentes/usuarios/usuarios-create/usuarios-create.component.html
@@ -14,7 +14,7 @@
             <input matInput placeholder="Telefone" [(ngModel)]="usuarios.telefone" name="telefone">
         </mat-form-field>
     </form>
-    <button mat-raised-button (click)="criarUsuarios()" color="primary">
+    <button mat-raised-button (click)="criarUsuarios()">
         Salvar
     </button>
     <button mat-raised-button (click)="cancelar()">
