--- a/frontend/src/app/views/manutencao-historicos/manutencao-historicos.component.html
+++ b/frontend/src/app/views/manutencao-historicos/manutencao-historicos.component.html
@@ -1,3 +1,4 @@
 <button mat-raised-button (click)="navegarHistoricoCreate()">
     Novo Histórico
 </button>
+<app-historico-read></app-historico-read>
