--- a/frontend/src/app/componentes/usuarios/usuarios-read/usuarios-read.component.html
+++ b/frontend/src/app/componentes/usuarios/usuarios-read/usuarios-read.component.html
@@ -23,7 +23,18 @@
 
         <ng-container matColumnDef="acoes">
             <th mat-header-cell *matHeaderCellDef>Ações</th>
-            <td mat-cell *matCellDef="let linha"></td>
+            <td mat-cell *matCellDef="let linha">
+                <a (click)="editar(linha)" class="edit">
+                    <i class="material-icons">
+                        edit
+                    </i>
+                </a>
+                <a (click)="excluir(linha)" class="delete">
+                    <i class="material-icons">
+                        delete
+                    </i>
+                </a>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="colunas"></tr>
