--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -3,6 +3,6 @@
         Bem Vindo!
     </mat-card-title>
     <mat-card-subtitle class="subtitle">
-        Código da aula do Haber
+        Sistema de seguranca
     </mat-card-subtitle>
 </mat-card>
