--- a/frontend/src/app/componentes/veiculos/veiculos-read/veiculos-read.component.html
+++ b/frontend/src/app/componentes/veiculos/veiculos-read/veiculos-read.component.html
@@ -11,6 +11,16 @@
         <ng-container matColumnDef="acoes">
             <th mat-header-cell *matHeaderCellDef>Ações</th>
             <td mat-cell *matCellDef="let linha">
+                <a (click)="editar(linha)" class="edit">
+                    <i class="material-icons">
+                        edit
+                    </i>
+                </a>
+                <a (click)="excluir(linha)" class="delete">
+                    <i class="material-icons">
+                        delete
+                    </i>
+                </a>
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="colunas"></tr>
